// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BridgeInputGroup should render destination networks 1`] = `
<div
  class="mm-modal"
  data-testid="bridge-network-picker-popover"
>
  <div
    aria-hidden="true"
    class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
    >
      <section
        aria-modal="true"
        class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm flex h-full flex-col overflow-hidden mm-box--padding-0 mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-elevated1 mm-box--rounded-lg mm-box--border-color-border-alternative mm-box--border-width-1 box--border-style-solid"
        role="dialog"
      >
        <header
          class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
        >
          <div
            class="col-start-2 col-end-3 w-full"
          >
            <h4
              class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
            >
              Select network
            </h4>
          </div>
          <div
            class="col-start-3 justify-self-end"
          >
            <button
              aria-label="Close"
              class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
            >
              <svg
                class="inline-block w-6 h-6 text-inherit"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.28 18.22a.75.75 0 0 1-1.06 1.06L12 13.06l-6.22 6.22a.75.75 0 0 1-1.06-1.06L10.94 12 4.72 5.78a.75.75 0 0 1 1.06-1.06L12 10.94l6.22-6.22a.75.75 0 0 1 1.06 1.06L13.06 12Z"
                />
              </svg>
            </button>
          </div>
        </header>
        <div
          class="flex flex-col min-h-0 flex-1 overflow-y-auto"
        >
          <button
            class="flex min-h-16 w-full cursor-pointer items-center justify-between border-0 p-4 text-left hover:bg-hover bg-muted"
            data-testid="bridge-network-picker-popover-all-networks"
            type="button"
          >
            <div
              class="flex min-w-0 items-center gap-3"
            >
              <div
                class="inline-flex shrink-0 items-center justify-center overflow-hidden rounded-full h-8 w-8 bg-muted"
              >
                <svg
                  class="inline-block w-5 h-5 text-icon-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2.25A9.75 9.75 0 1 0 21.75 12 9.76 9.76 0 0 0 12 2.25M20.25 12a8.2 8.2 0 0 1-.312 2.25h-3.61a14.8 14.8 0 0 0 0-4.5h3.61A8.2 8.2 0 0 1 20.25 12M9.563 15.75h4.874A10.8 10.8 0 0 1 12 19.969a10.8 10.8 0 0 1-2.437-4.219m-.366-1.5a13.2 13.2 0 0 1 0-4.5h5.614a13.2 13.2 0 0 1 0 4.5ZM3.75 12a8.2 8.2 0 0 1 .312-2.25h3.61a14.8 14.8 0 0 0 0 4.5h-3.61A8.2 8.2 0 0 1 3.75 12m10.688-3.75H9.561A10.8 10.8 0 0 1 12 4.031a10.8 10.8 0 0 1 2.438 4.219m4.905 0h-3.339a12.7 12.7 0 0 0-2.09-4.275 8.28 8.28 0 0 1 5.433 4.275Zm-9.256-4.275A12.7 12.7 0 0 0 7.996 8.25H4.653a8.28 8.28 0 0 1 5.434-4.275M4.653 15.75h3.343a12.7 12.7 0 0 0 2.09 4.275 8.28 8.28 0 0 1-5.433-4.275m9.26 4.275a12.7 12.7 0 0 0 2.091-4.275h3.343a8.28 8.28 0 0 1-5.434 4.275"
                  />
                </svg>
              </div>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate"
              >
                All networks
              </p>
            </div>
            <svg
              class="inline-block w-6 h-6 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.53 7.28-12 12a.75.75 0 0 1-1.06 0l-5.25-5.25a.75.75 0 0 1 1.06-1.06L9 17.69 20.47 6.22a.75.75 0 0 1 1.06 1.06"
              />
            </svg>
          </button>
          <div
            class="flex flex-col"
          >
            <p
              class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default px-4 pb-2 pt-4"
            >
              Default networks
            </p>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="Solana"
                    class="size-full object-contain"
                    src="./images/solana-logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Solana"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Solana
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-bip122:000000000019d6689c085ae165831e93"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-bip122:000000000019d6689c085ae165831e93"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="Bitcoin"
                    class="size-full object-contain"
                    src="./images/bitcoin-logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Bitcoin"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Bitcoin
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:1"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:1"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="Ethereum"
                    class="size-full object-contain"
                    src="./images/eth_logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Ethereum"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Ethereum
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:10"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:10"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="OP"
                    class="size-full object-contain"
                    src="./images/optimism.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="OP"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          OP
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:137"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:137"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="Polygon"
                    class="size-full object-contain"
                    src="./images/pol-token.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Polygon"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Polygon
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:56"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:56"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="BNB Chain"
                    class="size-full object-contain"
                    src="./images/bnb.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="BNB Chain"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          BNB Chain
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-tron:728126428"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-tron:728126428"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="Tron"
                    class="size-full object-contain"
                    src="./images/tron-logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Tron"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Tron
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`BridgeInputGroup should render source networks 1`] = `
<div
  class="mm-modal"
  data-testid="bridge-network-picker-popover"
>
  <div
    aria-hidden="true"
    class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
    >
      <section
        aria-modal="true"
        class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm flex h-full flex-col overflow-hidden mm-box--padding-0 mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-elevated1 mm-box--rounded-lg mm-box--border-color-border-alternative mm-box--border-width-1 box--border-style-solid"
        role="dialog"
      >
        <header
          class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
        >
          <div
            class="col-start-2 col-end-3 w-full"
          >
            <h4
              class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
            >
              Select network
            </h4>
          </div>
          <div
            class="col-start-3 justify-self-end"
          >
            <button
              aria-label="Close"
              class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
            >
              <svg
                class="inline-block w-6 h-6 text-inherit"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.28 18.22a.75.75 0 0 1-1.06 1.06L12 13.06l-6.22 6.22a.75.75 0 0 1-1.06-1.06L10.94 12 4.72 5.78a.75.75 0 0 1 1.06-1.06L12 10.94l6.22-6.22a.75.75 0 0 1 1.06 1.06L13.06 12Z"
                />
              </svg>
            </button>
          </div>
        </header>
        <div
          class="flex flex-col min-h-0 flex-1 overflow-y-auto"
        >
          <button
            class="flex min-h-16 w-full cursor-pointer items-center justify-between border-0 p-4 text-left hover:bg-hover bg-muted"
            data-testid="bridge-network-picker-popover-all-networks"
            type="button"
          >
            <div
              class="flex min-w-0 items-center gap-3"
            >
              <div
                class="inline-flex shrink-0 items-center justify-center overflow-hidden rounded-full h-8 w-8 bg-muted"
              >
                <svg
                  class="inline-block w-5 h-5 text-icon-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2.25A9.75 9.75 0 1 0 21.75 12 9.76 9.76 0 0 0 12 2.25M20.25 12a8.2 8.2 0 0 1-.312 2.25h-3.61a14.8 14.8 0 0 0 0-4.5h3.61A8.2 8.2 0 0 1 20.25 12M9.563 15.75h4.874A10.8 10.8 0 0 1 12 19.969a10.8 10.8 0 0 1-2.437-4.219m-.366-1.5a13.2 13.2 0 0 1 0-4.5h5.614a13.2 13.2 0 0 1 0 4.5ZM3.75 12a8.2 8.2 0 0 1 .312-2.25h3.61a14.8 14.8 0 0 0 0 4.5h-3.61A8.2 8.2 0 0 1 3.75 12m10.688-3.75H9.561A10.8 10.8 0 0 1 12 4.031a10.8 10.8 0 0 1 2.438 4.219m4.905 0h-3.339a12.7 12.7 0 0 0-2.09-4.275 8.28 8.28 0 0 1 5.433 4.275Zm-9.256-4.275A12.7 12.7 0 0 0 7.996 8.25H4.653a8.28 8.28 0 0 1 5.434-4.275M4.653 15.75h3.343a12.7 12.7 0 0 0 2.09 4.275 8.28 8.28 0 0 1-5.433-4.275m9.26 4.275a12.7 12.7 0 0 0 2.091-4.275h3.343a8.28 8.28 0 0 1-5.434 4.275"
                  />
                </svg>
              </div>
              <p
                class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate"
              >
                All networks
              </p>
            </div>
            <svg
              class="inline-block w-6 h-6 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.53 7.28-12 12a.75.75 0 0 1-1.06 0l-5.25-5.25a.75.75 0 0 1 1.06-1.06L9 17.69 20.47 6.22a.75.75 0 0 1 1.06 1.06"
              />
            </svg>
          </button>
          <div
            class="flex flex-col"
          >
            <p
              class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default px-4 pb-2 pt-4"
            >
              Default networks
            </p>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="Solana"
                    class="size-full object-contain"
                    src="./images/solana-logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Solana"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Solana
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-bip122:000000000019d6689c085ae165831e93"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-bip122:000000000019d6689c085ae165831e93"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="Bitcoin"
                    class="size-full object-contain"
                    src="./images/bitcoin-logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Bitcoin"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Bitcoin
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:1"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:1"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="Ethereum"
                    class="size-full object-contain"
                    src="./images/eth_logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Ethereum"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Ethereum
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:10"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:10"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="OP"
                    class="size-full object-contain"
                    src="./images/optimism.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="OP"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          OP
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:137"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:137"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="Polygon"
                    class="size-full object-contain"
                    src="./images/pol-token.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Polygon"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Polygon
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
              data-testid="bridge-network-picker-popover-item-eip155:56"
            >
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-eip155:56"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-8 w-8 rounded-md"
                >
                  <img
                    alt="BNB Chain"
                    class="size-full object-contain"
                    src="./images/bnb.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="BNB Chain"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          BNB Chain
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
